--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "knex": "^0.12.9",
     "material-ui": "^0.19.1",
     "morgan": "^1.8.1",
+    "node-glassdoor": "^1.0.5",
     "nodemon": "^1.12.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
